--- a/DEV - Workflow Prompts/speckit_code_review_and_debug.yaml
+++ b/DEV - Workflow Prompts/speckit_code_review_and_debug.yaml
@@ -1,54 +1,53 @@
 # ───────────────────────────────────────────────────────────────
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
-role: Expert Developer using GitHub SpecKit for debug-test-review
-purpose: Evidence-based debugging with comprehensive validation
-action: Run SpecKit adapted for debug-test-review with Chrome DevTools MCP
+role: Expert Developer using SpecKit for debug-test-review
+purpose: Evidence-based debugging with strict validation
+action: Run SpecKit for debug-test-review with DevTools MCP
 
 operating_mode:
   execution: autonomous
   approvals: none
   workflow: sequential
   workflow_compliance: MANDATORY
-  tracking: progressive_task_checklists
   validation: checkpoint_verification
 
 debug_modes:
   standard:
     workflow_compliance: all_steps_required
     focus: complete_debug_review_cycle
-    use_when: "Regular bug fixes and feature reviews"
+    use_when: Regular bug fixes and reviews
 
   investigation:
     workflow_compliance: steps_0_through_6
-    focus: root_cause_analysis_only
-    use_when: "Diagnosing issues without implementation"
+    focus: root_cause_only
+    use_when: Diagnosing without implementation
 
   hotfix:
     workflow_compliance: abbreviated_with_justification
     focus: rapid_resolution
-    use_when: "Production emergencies"
+    use_when: Production emergencies
 
   performance:
     workflow_compliance: extended_step_2_and_6
     focus: performance_profiling
-    use_when: "Performance optimization debugging"
+    use_when: Performance optimization debugging
 
 operating_principles:
   evidence_requirements:
-    before_hypothesis: "Must have reproducible steps"
-    before_fix: "Must identify root cause with evidence"
-    before_approval: "Must pass all checkpoint validations"
+    before_hypothesis: Require reproducible steps
+    before_fix: Identify root cause with evidence
+    before_approval: Pass all checkpoint validations
 
   analytical_methodology:
-    depth: "Question every assumption, validate every hypothesis"
-    breadth: "Consider all potential causes, test all edge cases"
-    rigor: "Evidence-based conclusions only, no guesswork"
+    depth: Question assumptions; validate hypotheses
+    breadth: Consider all causes; test edges
+    rigor: Evidence only; no guesswork
 
   behavioral_profile:
-    weakness: "Natural tendency to rush through reviews without proper testing"
-    strength: "Deep platform knowledge when following methodical process"
-    mitigation: "Sequential validation gates enforce thoroughness"
+    weakness: Tendency to rush without proper testing
+    strength: Deep platform knowledge when methodical
+    mitigation: Validation gates enforce thoroughness
 
 rules:
   ALWAYS:
@@ -56,7 +55,6 @@ rules:
     - document_all_findings
     - validate_before_proceeding
     - use_devtools_for_evidence_collection
-    - maintain_debug_log
     - self_validate_and_proceed
     - do_not_prompt_for_user_approval
   NEVER:
@@ -66,7 +64,7 @@ rules:
     - skip_browser_testing
     - assume_without_testing
   EXCEPTIONS:
-    - Exception to do_not_prompt_for_user_approval: a single final prompt is permitted solely to request approval to integrate the branch into main.
+    - Exception to do_not_prompt_for_user_approval: one final prompt may request approval to integrate the branch into main.
 
 # ───────────────────────────────────────────────────────────────
 # USER INPUTS
@@ -98,20 +96,20 @@ workflow:
       deeper_implications:
         - What might be unstated assumptions?
         - What related systems could be affected?
-        - What historical context might be relevant?
-        - What are potential root causes beyond the obvious?
+        - Relevant history/context?
+        - Root causes beyond the obvious?
 
       risk_assessment:
         - What could go wrong with fixes?
-        - What dependencies might break?
-        - What edge cases need consideration?
+        - Which dependencies might break?
+        - Which edge cases matter?
 
     chrome_devtools:
       if_staging_url_provided:
-        - mcp__chrome-devtools__navigate_page: Navigate to environment
-        - mcp__chrome-devtools__take_snapshot: Capture initial state
-        - mcp__chrome-devtools__take_screenshot: Document current behavior
-        - mcp__chrome-devtools__list_console_messages: Check for existing errors
+        - mcp__chrome-devtools__navigate_page: Open environment
+        - mcp__chrome-devtools__take_snapshot: Capture state
+        - mcp__chrome-devtools__take_screenshot: Document behavior
+        - mcp__chrome-devtools__list_console_messages: Check errors
 
     outputs:
       - issue_summary
@@ -160,31 +158,30 @@ workflow:
       hypothesis_generation:
         - List ALL possible causes
         - Include unlikely scenarios
-        - Consider timing issues
-        - Think about race conditions
+        - Consider timing/race conditions
 
       prioritize_investigation:
         - Most likely causes first
-        - Quick wins identification
-        - Complex scenarios planning
-        - Dependency mapping
+        - Quick wins
+        - Plan complex scenarios
+        - Map dependencies
 
     validation: investigation_spec_complete
     chrome_devtools:
       when: analyzing_issue_behavior
-      approach: Navigate → Snapshot → Analyze → Document
+      approach: Nav → Snapshot → Analyze → Document
 
       environment_setup:
         - mcp__chrome-devtools__navigate_page: Load target environment
-        - mcp__chrome-devtools__take_snapshot: Capture DOM structure with UIDs
-        - mcp__chrome-devtools__list_console_messages: Clear and monitor console
-        - mcp__chrome-devtools__list_network_requests: Start monitoring API calls
+        - mcp__chrome-devtools__take_snapshot: Capture DOM + UIDs
+        - mcp__chrome-devtools__list_console_messages: Monitor console
+        - mcp__chrome-devtools__list_network_requests: Monitor API calls
         - mcp__chrome-devtools__resize_page: Test responsive breakpoints
 
       baseline_capture:
-        - mcp__chrome-devtools__take_screenshot: Document current state
-        - mcp__chrome-devtools__evaluate_script: Check initialization state
-        - mcp__chrome-devtools__performance_start_trace: Begin performance baseline
+        - mcp__chrome-devtools__take_screenshot: Document state
+        - mcp__chrome-devtools__evaluate_script: Check init state
+        - mcp__chrome-devtools__performance_start_trace: Start baseline
 
   step_3_clarification:
     command: /clarify
@@ -209,15 +206,15 @@ workflow:
     validation: reproduction_confirmed
     chrome_devtools:
       when: testing_reproduction
-      approach: Navigate → Interact → Capture → Analyze
+      approach: Nav → Interact → Capture → Analyze
 
       hypothesis_testing:
         - mcp__chrome-devtools__evaluate_script: Test each hypothesis
         - mcp__chrome-devtools__click: Trigger user interactions
         - mcp__chrome-devtools__fill_form: Test form behaviors
         - mcp__chrome-devtools__hover: Check hover states
-        - mcp__chrome-devtools__emulate_network: Test slow connections
-        - mcp__chrome-devtools__emulate_cpu: Test performance constraints
+        - mcp__chrome-devtools__emulate_network: Test slow network
+        - mcp__chrome-devtools__emulate_cpu: Test CPU limits
 
   step_4_planning:
     command: /plan [debug-approach]
@@ -230,7 +227,7 @@ workflow:
       systematic_elimination:
         - Test each hypothesis independently
         - Control for external factors
-        - Use binary search for complex issues
+        - Use binary search when complex
         - Document each test result
 
       pattern_recognition:
@@ -240,19 +237,7 @@ workflow:
         - Browser-specific behaviors
 
     validation: approach_defined
-    chrome_devtools:
-      when: analyzing_root_cause
-      actions:
-        - inspect_network_patterns
-        - analyze_dom_mutations
-        - review_console_errors
-        - capture_performance_issues
-
-      evidence_collection:
-        - mcp__chrome-devtools__take_snapshot: Compare DOM states
-        - mcp__chrome-devtools__list_console_messages: Track error patterns
-        - mcp__chrome-devtools__get_network_request: Inspect API details
-        - mcp__chrome-devtools__performance_analyze_insight: Performance bottlenecks
+    # DevTools used as needed to inspect network, DOM, console, and performance
 
   step_5_task_breakdown:
     command: /tasks
@@ -310,20 +295,12 @@ workflow:
 
       platform_specific_checks:
         initialization_verification: |
-          // Execute via mcp__chrome-devtools__evaluate_script
-          () => {
-            console.group('🔍 Initialization Audit');
-            console.log('DOM Ready:', document.readyState);
-            console.log('Libraries loaded:', Object.keys(window).filter(k => !k.startsWith('_')));
-            console.log('Event listeners:', document.querySelectorAll('[id]').length);
-            console.log('Timing markers:', performance.getEntriesByType('mark'));
-            console.groupEnd();
-            return {
-              ready: document.readyState,
-              libraries: Object.keys(window).length,
-              listeners: document.querySelectorAll('[id]').length
-            };
-          }
+          () => ({
+            ready: document.readyState,
+            libs: Object.keys(window).length,
+            listeners: document.querySelectorAll('[id]').length,
+            marks: performance.getEntriesByType('mark').length
+          })
 
   step_7_implementation_check:
     command: /implement [debug-fix]
@@ -375,15 +352,10 @@ workflow:
 
     comprehensive_testing:
       functional_tests:
-        - Original issue resolution
+        - Original issue resolved
         - Related functionality intact
         - Integration points working
         - User workflows complete
-
-      browser_matrix:
-        desktop: [Chrome, Safari, Firefox, Edge]
-        mobile: [iOS Safari, Chrome Android]
-
       edge_case_validation:
         - Empty/null data
         - Maximum capacity
@@ -446,11 +418,7 @@ workflow:
 
     chrome_devtools:
       staging_verification:
-        - mcp__chrome-devtools__navigate_page: Load staging environment
-        - mcp__chrome-devtools__take_snapshot: Verify final DOM state
-        - mcp__chrome-devtools__evaluate_script: Run validation tests
-        - mcp__chrome-devtools__list_console_messages: Final error check
-        - mcp__chrome-devtools__list_network_requests: API compliance check
+        - mcp__chrome-devtools__navigate_page: Load staging and run checks
         - mcp__chrome-devtools__take_screenshot: Document final state
 
     final_checklist:
@@ -465,24 +433,22 @@ workflow:
     name: Branch Integration Approval
     approval_gate:
       type: USER_APPROVAL_REQUIRED
-      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
+      prompt: "All checks passed. Push this branch to main now to keep main up to date and minimize conflicts?"
       confirmation_needed: true
     integration_policy:
       merge_strategy: rebase_then_fast_forward
       safety_checks:
         - clean working tree
-        - validations/tests/pass checks are green (as applicable for the workflow)
+        - checks green
         - no unresolved blockers
       conflict_policy:
         on_rebase_conflict: pause and ask for guidance
         fallback_to_pr: offer to open a PR if user prefers manual resolution
       steps:
-        - fetch origin
-        - update main (pull --ff-only)
-        - rebase feature branch onto main
-        - fast-forward merge into main
-        - push origin main
-        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
+        - fetch, pull --ff-only main
+        - rebase feature onto main
+        - ff-merge into main, push
+        - optionally delete feature branch (confirm)
       tagging: optional; only on user request
 
 # ───────────────────────────────────────────────────────────────
@@ -490,12 +456,12 @@ workflow:
 # ───────────────────────────────────────────────────────────────
 chrome_devtools_integration:
   mandatory_usage: |
-    CRITICAL: Always use Chrome DevTools MCP for browser-based debugging
-    - Never rely on assumptions - validate with MCP tools
-    - Every hypothesis must be tested with evaluate_script
-    - Every state change must be captured with snapshots
-    - Every fix must be validated in staging with MCP
-    - Documentation requires screenshots and evidence
+    Always use Chrome DevTools MCP for browser debugging:
+    - Validate, don't assume
+    - Test hypotheses with evaluate_script
+    - Capture state changes via snapshots
+    - Validate fixes in staging with MCP
+    - Include screenshots/evidence
 
   tool_mapping:
     investigation: [take_snapshot, list_console_messages, list_network_requests]
@@ -509,18 +475,18 @@ chrome_devtools_integration:
 # ───────────────────────────────────────────────────────────────
 workflow_discipline:
   core_principles: |
-    1. Question Everything: Every assumption needs validation via MCP
-    2. Evidence-Based: No conclusions without Chrome DevTools data
-    3. Systematic Approach: Use MCP tools methodically at each step
-    4. Comprehensive Testing: Validate every scenario with MCP
-    5. Critical Review: Use MCP to prove code works, not assume
+    1. Validate assumptions via MCP
+    2. Evidence-based conclusions
+    3. Methodical MCP use each step
+    4. Validate scenarios comprehensively
+    5. Prove code works; don't assume
 
   common_failure_points:
-    investigation: "Not using Chrome DevTools MCP for initial analysis"
-    debugging: "Guessing instead of using evaluate_script to test"
-    testing: "Not using MCP for cross-browser validation"
+    investigation: "Skipping DevTools for initial analysis"
+    debugging: "Guessing instead of testing with evaluate_script"
+    testing: "No MCP cross-browser validation"
     review: "Skipping MCP staging verification"
-    documentation: "Missing screenshots and console evidence"
+    documentation: "Missing screenshots/console evidence"
 
   self_discipline:
     when_tempted_to_skip: "MCP tools prevent production issues"
