speckit_performance_improvement

--- a/DEV - Workflow Prompts/speckit_performance_improvement.yaml
+++ b/DEV - Workflow Prompts/speckit_performance_improvement.yaml
@@ -75,6 +75,7 @@ rules:
 # USER INPUTS
 # ───────────────────────────────────────────────────────────────
 user_inputs:
+  spec_folder: "[SPEC_FOLDER]"
   context: "[CONTEXT]"  
   request: "Thoroughly examine the linked spec folder and autonomously carry out a performance review and performance improvement session following the relevant optimization mode workflow" 
   environment: "[LINK]"
@@ -89,10 +90,11 @@ user_inputs:
 workflow:
   step_0_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
+    spec_folder: "Use [SPEC_FOLDER] from user_inputs"
     context: "Use [CONTEXT] from user_inputs"
     request: "Use [REQUEST] from user_inputs"
     environment: "Use [LINK] from user_inputs"
-    scope: "Use [FILES] from user_inputs; if empty, use scope_policy.default (specs/**)"
+    scope: "Use [FILES] from user_inputs; if empty, use scope_policy.default (specs/**); ALWAYS include [SPEC_FOLDER]/** when provided"
     action: Analyze inputs and establish baseline
 
     performance_assessment:
