speckit_plan_and_spec

--- a/DEV - Workflow Prompts/speckit_spec_review_and_improve.yaml
+++ b/DEV - Workflow Prompts/speckit_spec_review_and_improve.yaml
@@ -55,8 +55,8 @@ rules:
 # ───────────────────────────────────────────────────────────────
 user_inputs:
   spec_folder: "[SPEC_FOLDER]"
-  context: "[CONTEXT]" 
-  request: "[REQUEST]" 
+  context: "[CONTEXT]"  
+  request: "Thoroughly examine the linked spec folder and autonomously carry out a spec review and improvement session following the relevant review mode workflow" 
 
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
