Improved Context Extraction & Prompts

--- a/DEV - Workflows/speckit_code_review_and_debug.yaml
+++ b/DEV - Workflows/speckit_code_review_and_debug.yaml
@@ -78,14 +78,36 @@ rules:
 # USER INPUTS
 # ───────────────────────────────────────────────────────────────
 user_inputs:
+  git_branch: "[GIT_BRANCH]"
   spec_folder: "[SPEC_FOLDER]"
-  context: "[CONTEXT]"     
-  request: "Thoroughly examine the linked spec folder and autonomously carry out a code review and debugging session following the relevant debug mode workflow"     
-  environment: "[LINK]"     
-  # If [FILES] is empty, use scope_policy.default (specs/**).
-  # To include modules under active debug, explicitly add them:
-  #   specs/**, src/hero/**, src/modal/**
-  scope: "[FILES]"         
+  context: "[CONTEXT]"
+  issues: "[ISSUES]"
+  request: "[REQUEST]"
+  environment: "[LINK]"
+  scope: "[FILES]"
+
+# ───────────────────────────────────────────────────────────────
+# REQUEST HANDLING
+# ───────────────────────────────────────────────────────────────
+request_handling:
+  default: "Thoroughly examine the linked spec folder and autonomously carry out a code review and debugging session following the relevant debug mode workflow"
+  override: "Use [REQUEST] if provided (replaces default), else use default above"
+
+# ───────────────────────────────────────────────────────────────
+# FIELD HANDLING
+# ───────────────────────────────────────────────────────────────
+field_handling:
+  defaults:
+    git_branch_empty: "Auto-create feature-{NNN} from highest +001"
+    spec_folder_empty: "Auto-create specs/{NNN} from highest +001"
+    context_empty: "Infer from [REQUEST] and [LINK]"
+    issues_empty: "Investigate during workflow"
+    environment_empty: "Skip browser testing steps"
+    scope_empty: "Use scope_policy.default"
+
+  scope_policy:
+    default: "specs/**"
+    rule: "Limit file operations to scope when provided; ALWAYS include [SPEC_FOLDER]/** when provided"
 
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
@@ -93,11 +115,13 @@ user_inputs:
 workflow:
   step_0_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
-    spec_folder: "Use [SPEC_FOLDER] from user_inputs"
-    context: "Use [CONTEXT] from user_inputs"
-    request: "Use [REQUEST] from user_inputs"
-    environment: "Use [LINK] from user_inputs"
-    scope: "Use [FILES] from user_inputs; if empty, use scope_policy.default (specs/**); ALWAYS include [SPEC_FOLDER]/** when provided"
+    git_branch: "[GIT_BRANCH] → auto-create if empty"
+    spec_folder: "[SPEC_FOLDER] → auto-create if empty"
+    context: "[CONTEXT] → infer if empty"
+    issues: "[ISSUES] → discover if empty"
+    request: "Use [REQUEST] if provided, else use default from request_handling"
+    environment: "[LINK] → skip DevTools if empty"
+    scope: "[FILES] → default scope if empty; ALWAYS include [SPEC_FOLDER]/**"
     action: Analyze inputs and confirm understanding
 
     debug_analysis:
